<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/baseline_home_18"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_description"
        android:icon="@drawable/baseline_description_18"
        android:title="@string/title_description"/>

    <item
        android:id="@+id/navigation_summary"
        android:icon="@drawable/baseline_insert_chart_outlined_18"
        android:title="@string/title_summary"/>

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/baseline_transcribe_18"
        android:title="@string/title_user_profile" />

</menu>